# dbt-bigquery-monitoring-parser

./: .gitignore  LICENSE  Makefile  README  README.md  config.py  documentation_parser.py  pyproject.toml  sql_generator.py  test_documentation_parser.py
.github/: copilot-instructions.md
.github/workflows/: documentation_parser.yml
tests/: html_content_2_expected.sql  html_content_expected.sql  test_documentation_parser.py  test_generate_sql_dataset_expected.sql  test_generate_sql_table_expected.sql  test_generate_sql_table_no_project_id_expected.sql  test_generate_sql_table_with_custom_materialization_and_partitioning_expected.sql  test_generate_sql_table_with_custom_materialization_and_project_scope_expected.sql  test_generate_sql_table_with_custom_materialization_expected.sql  test_generate_sql_table_with_partitioning_key_expected.sql  test_generate_yml_expected.yml  test_generate_yml_with_complex_columns_expected.yml
